Remove gestures on mobile, fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,7 @@ body {
   font-family: var(--font-sans);
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 p,
